cmake_minimum_required(VERSION 3.22)
project(Raymarch)
find_package(ArrayFire)
find_package(SDL2)
add_executable(main main.cpp events.cpp quaternion.cpp)
target_link_libraries(main ArrayFire::af)
target_link_libraries(main m)
target_link_libraries(main SDL2)
target_compile_options(main PUBLIC -Wall -Wextra -Wpedantic -O3 -pthread)